// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Login Form renders successfully when loading 1`] = `
<Container>
  <Header
    includeBackButton={true}
  />
  <Card>
    <Space
      height={30}
    />
    <CardSection>
      <Logo
        includeText={true}
        size="small"
      />
    </CardSection>
    <Space
      height={30}
    />
    <CardSection>
      <Input
        label="Email"
        onChangeText={[Function]}
        placeholder="email@university.edu"
        value=""
      />
    </CardSection>
    <PasswordInput
      onChangeText={[Function]}
      placeholder="password"
      value=""
    />
    <CardSection>
      <Spinner
        size="large"
      />
    </CardSection>
    <Space
      height={30}
    />
    <CardSection>
      <Link1
        linkText="Forgot Password?"
        onPress={[Function]}
      />
    </CardSection>
  </Card>
</Container>
`;

exports[`Testing Login Form renders successfully with error 1`] = `
<Container>
  <Header
    includeBackButton={true}
  />
  <Card>
    <Space
      height={30}
    />
    <CardSection>
      <Logo
        includeText={true}
        size="small"
      />
    </CardSection>
    <Space
      height={30}
    />
    <CardSection>
      <Input
        label="Email"
        onChangeText={[Function]}
        placeholder="email@university.edu"
        value=""
      />
    </CardSection>
    <PasswordInput
      onChangeText={[Function]}
      placeholder="password"
      value=""
    />
    <CardSection>
      <ErrorText>
        test error message
      </ErrorText>
    </CardSection>
    <CardSection>
      <Button
        onPress={[Function]}
      >
        log in
      </Button>
    </CardSection>
    <Space
      height={30}
    />
    <CardSection>
      <Link1
        linkText="Forgot Password?"
        onPress={[Function]}
      />
    </CardSection>
  </Card>
</Container>
`;

exports[`Testing Login Form renders successfully with initial state 1`] = `
<Container>
  <Header
    includeBackButton={true}
  />
  <Card>
    <Space
      height={30}
    />
    <CardSection>
      <Logo
        includeText={true}
        size="small"
      />
    </CardSection>
    <Space
      height={30}
    />
    <CardSection>
      <Input
        label="Email"
        onChangeText={[Function]}
        placeholder="email@university.edu"
        value=""
      />
    </CardSection>
    <PasswordInput
      onChangeText={[Function]}
      placeholder="password"
      value=""
    />
    <CardSection>
      <Button
        onPress={[Function]}
      >
        log in
      </Button>
    </CardSection>
    <Space
      height={30}
    />
    <CardSection>
      <Link1
        linkText="Forgot Password?"
        onPress={[Function]}
      />
    </CardSection>
  </Card>
</Container>
`;
